# SalientGreenGPU-Deprecated

./: BUILD  CMakeLists.txt  README  README.md  TODO.txt  main-diff.txt
CMakeModules/.svn/: entries
CMakeModules/.svn/text-base/: FindOpenCV2.cmake.svn-base
compile/: CMakeCache.txt  Makefile  SalientGreenGPU  cmake_install.cmake  libcudaCode.dylib
include/.svn/: entries
include/SalientGreenGPU/: SalientGreenGPU.H  Timer.H
include/SalientGreenGPU/.svn/: entries
include/SalientGreenGPU/.svn/text-base/: SalientGreenGPU.H.svn-base  Timer.H.svn-base
include/SalientGreenGPU/Cuda/: dcAdjust.H
include/SalientGreenGPU/Cuda/.svn/: entries
include/SalientGreenGPU/Filters/: Gaussian.H  LogGabor.H  Utility.H
include/SalientGreenGPU/Filters/.svn/: entries
include/SalientGreenGPU/Filters/.svn/text-base/: Gaussian.H.svn-base  LogGabor.H.svn-base  LowPass.H.svn-base
include/SalientGreenGPU/Normalization/: Normalization.H
include/SalientGreenGPU/Normalization/.svn/: entries
src/.svn/: entries
src/SalientGreenGPU/: SalientGreenGPU.C  SalientGreenGPU.cpp  SalientMain.cpp  main.C
src/SalientGreenGPU/.svn/: entries
src/SalientGreenGPU/.svn/text-base/: SalientGreenGPU.C.svn-base  main.C.svn-base
src/SalientGreenGPU/Cuda/: dcAdjust.cu
src/SalientGreenGPU/Cuda/.svn/: entries
src/SalientGreenGPU/Cuda/.svn/text-base/: dcAdjustWrapper.C.svn-base
src/SalientGreenGPU/Filters/: Gaussian.cpp  LogGabor.C  LogGabor.cpp  LowPass.cpp  Utility.C
src/SalientGreenGPU/Filters/.svn/: entries
src/SalientGreenGPU/Filters/.svn/text-base/: Gaussian.C.svn-base  LogGabor.C.svn-base  LowPass.C.svn-base
src/SalientGreenGPU/Normalization/.svn/: entries
src/SalientGreenGPU/Normalization/.svn/text-base/: Normalization.C.svn-base
